fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,75 @@
-*{
+* {
     padding: 0px;
     margin: 0px;
 }
 
-body{
+body {
     background-image: url(../img/amanda-mocci-90505-unsplash1400.jpg);
     background-repeat: repeat;
     font-family: 'Raleway', sans-serif;
     color: white;
 }
 
-.navbar-brand{
+.navbar-brand {
     font-family: 'Great Vibes', cursive;
     font-weight: bold;
 }
 
-.navbar-header{
+.navbar-header {
     color: goldenrod;
 }
 
-div{
-    box-sizing:border-box;
+.col-md-12 {
+    padding: 0% 5%;
 }
 
-.container h1{
+
+.col-md-9 {
+    padding: 0% 5%;
+}
+
+div {
+    box-sizing: border-box;
+}
+
+.container h1 {
     text-align: center;
     color: white;
     font-size: 150px;
-    text-shadow: 5px 5px black; 
+    text-shadow: 5px 5px black;
     font-weight: bold;
     font-family: 'Great Vibes', cursive;
 }
 
-
-li a{
+li a {
     font-size: 20px;
 }
 
 
-.container h2{
+.container h2 {
     text-align: center;
     color: goldenrod;
 }
 
-.row, .col-md-4, .col-md-8{
+.row,
+.col-md-4,
+.col-md-8 {
     padding: 1%;
-    border: 1px solid white;
 }
 
-#home h2, #menu2 h2, #menu3 h2{
+.col-md-8 {
+    padding-left: 50px;
+}
+
+
+
+#home h2,
+#menu2 h2,
+#menu3 h2 {
     font-family: 'Great Vibes', cursive;
 }
 
-.tab-content h2{
+.tab-content h2 {
     color: white;
     font-weight: bolder;
     font-family: 'Raleway', sans-serif;
@@ -60,113 +77,147 @@ li a{
     color: goldenrod;
 }
 
-.modal-content h4{
+.modal-content h4 {
     color: black;
 }
 
-.modal-body>button{
-    background-color:black;
+.modal-body > button {
+    background-color: black;
 }
 
-.modal-body a{
+.modal-body a {
     color: goldenrod;
     font-weight: bold;
     font-size: 24px;
 }
 
 /*this was added for the row*/
-.hg{
+.hg {
     margin-top: 50px;
 }
 
-.pt{
+.pt {
     margin-top: 150px;
 }
 
-
-.row h3{
+.row h3 {
     font-weight: bolder;
     font-size: 28px;
     text-shadow: 3px 3px grey;
 }
 
-.row p{
+.row p {
     font-size: 18px;
 }
 
-.col-md-12 tab-content>row{
+.col-md-12 tab-content > row {
     padding-top: 50px;
 }
 
-.mockingjaydescription, .hungergamesdescription, .yearjungledescription{
+.mockingjaydescriptiona li {
+    list-style-type: none;
+}
+
+.mockingjaydescription,
+.hungergamesdescription,
+.yearjungledescription {
     display: flex;
 }
 
-.yearjungledescriptiona{
+.yearjungledescriptiona {
     display: flex;
     align-items: center;
 }
 
-.mockingjaydescriptiona, .mockingjaydescriptionb, .hungergamesdescriptiona, .hungergamesdescriptionb, .yearjungledescriptiona, .yearjungledescriptionb{
-    flex: 1;
-    border: 1px solid white;
+.hungergamesdescriptionb {
+    padding-left: 50px;
 }
 
-.hungergamesreviews p, .catchingfirereviews p, .hungergamesdescriptionb, .mockingjaydescriptionb p, .mockingjayreviews p, .underlandreviews p, .yearjungledescriptiona{
+.mockingjaydescriptiona,
+.mockingjaydescriptionb,
+.hungergamesdescriptiona,
+.hungergamesdescriptionb,
+.yearjungledescriptiona,
+.yearjungledescriptionb {
+    flex: 1;
+}
+
+
+.hungergamesreviews p,
+.catchingfirereviews p,
+.hungergamesdescriptionb,
+.mockingjaydescriptionb p,
+.mockingjayreviews p,
+.underlandreviews p,
+.yearjungledescriptiona{
     font-style: italic;
     font-size: 16px;
     color: goldenrod;
     font-weight: bold;
-    text-shadow: 2px 2px black; 
+    text-shadow: 2px 2px black;
 }
 
-.yearjungledescriptiona{
+.yearjungledescriptiona {
     padding-right: 30px;
 }
 
-@media screen and (max-width: 1190px){
-    .col-md-8{
-        padding-left: 40px;
+@media screen and (max-width: 1190px) {
+    .col-md-8 {
+        padding-left: 50px;
     }
-    .col-md-9{
-        padding-left: 60px;
+
+    .col-md-9 {
+        padding-left: 90px;
     }
 }
 
-@media screen and (max-width: 800px){
-    .container h1{
+@media screen and (max-width: 800px) {
+    .container h1 {
         font-size: 100px;
     }
-    .col-md-4, .col-md-3{
+
+    .col-md-4,
+    .col-md-3 {
         display: flex;
         justify-content: center;
     }
-    .col-md-8{
+
+    .col-md-8 {
         padding-right: 40px;
     }
-    .col-md-9{
+
+    .col-md-9 {
         padding-right: 60px;
+        padding: 0% 3%;
+    }
+
+    .col-md-12 {
+        padding: 0% 1%;
     }
 }
 
-@media screen and (max-width: 375px){
-    .container h1{
+@media screen and (max-width: 375px) {
+    .container h1 {
         font-size: 60px;
     }
-    .col-md-4{
+
+    .col-md-4 {
         display: flex;
         justify-content: center;
     }
-    .mockingjaydescription, .hungergamesdescription, .yearjungledescription{
+
+    .mockingjaydescription,
+    .hungergamesdescription,
+    .yearjungledescription {
         flex-direction: column;
     }
+
+    .hgsum,
+    .col-md-9,
+    .col-md-8,
+    .hungergamesdescriptionb {
+        padding: 10%;
+    }
+
+
 }
-
-
-
-
-
-
-
-
-
